[gd_scene load_steps=45 format=1]

[ext_resource path="res://scene/load.gd" type="Script" id=1]
[ext_resource path="res://images/Background/background.png" type="Texture" id=2]
[ext_resource path="res://images/sinar-kedip.png" type="Texture" id=3]
[ext_resource path="res://images/cloud.png" type="Texture" id=4]
[ext_resource path="res://images/logo_3.png" type="Texture" id=5]
[ext_resource path="res://images/top-text.png" type="Texture" id=6]
[ext_resource path="res://images/download_03.png" type="Texture" id=7]
[ext_resource path="res://images/download_03_re.png" type="Texture" id=8]
[ext_resource path="res://images/download_08.png" type="Texture" id=9]
[ext_resource path="res://images/download_08_re.png" type="Texture" id=10]
[ext_resource path="res://images/download_06.png" type="Texture" id=11]
[ext_resource path="res://images/download_06_re.png" type="Texture" id=12]
[ext_resource path="res://script/save.gd" type="Script" id=13]
[ext_resource path="res://images/mini-games-option_03.png" type="Texture" id=14]
[ext_resource path="res://images/mini-games-option_cilik.png" type="Texture" id=15]
[ext_resource path="res://images/icon-new_03.png" type="Texture" id=16]
[ext_resource path="res://images/icon-new_05.png" type="Texture" id=17]
[ext_resource path="res://images/info-credit.png" type="Texture" id=18]
[ext_resource path="res://images/icon-new_07.png" type="Texture" id=19]
[ext_resource path="res://images/POPUP/pop-perilaku.png" type="Texture" id=20]
[ext_resource path="res://images/POPUP/close-2_03.png" type="Texture" id=21]
[ext_resource path="res://images/POPUP/pop-perilaku_06.png" type="Texture" id=22]
[ext_resource path="res://images/POPUP/Bahan-21_10.png" type="Texture" id=23]
[ext_resource path="res://images/POPUP/pop-perilaku_05.png" type="Texture" id=24]
[ext_resource path="res://images/POPUP/Bahan-21_08.png" type="Texture" id=25]
[ext_resource path="res://images/POPUP/pop-pengetahuan.png" type="Texture" id=26]
[ext_resource path="res://images/POPUP/close-1_03.png" type="Texture" id=27]
[ext_resource path="res://images/POPUP/pop-pengetahuan-2.png" type="Texture" id=28]
[ext_resource path="res://images/POPUP/Bahan-21_06.png" type="Texture" id=29]
[ext_resource path="res://images/POPUP/info_03_03.png" type="Texture" id=30]
[ext_resource path="res://images/NEW/credit/credit_06.png" type="Texture" id=31]
[ext_resource path="res://images/NEW/credit/credit_03.png" type="Texture" id=32]
[ext_resource path="res://images/NEW/credit/profil_09.png" type="Texture" id=33]
[ext_resource path="res://images/NEW/credit/profil_12.png" type="Texture" id=34]
[ext_resource path="res://images/NEW/credit/profil_11.png" type="Texture" id=35]
[ext_resource path="res://images/1layout-popup.png" type="Texture" id=36]
[ext_resource path="res://images/layout-popup_06.png" type="Texture" id=37]
[ext_resource path="res://images/layout-popup_07.png" type="Texture" id=38]

[sub_resource type="Animation" id=1]

resource/name = "fadeLamp"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Container/MarginContainer/TextureFrame:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.5, 1, 1.2, 1.5, 1.8, 2, 2.3, 2.6, 2.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/MarginContainer/TextureFrame1:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 807, 85 ), Vector2( -804, 90 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "moveCloud"
length = 7.0
loop = true
step = 0.1

[sub_resource type="Animation" id=3]

resource/name = "popup"
length = 0.75
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("popupPerilaku:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

resource/name = "popupClose"
length = 0.75
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("popupClose:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]

resource/name = "popupInfo"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("popupInfo:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("popupInfo/TextureFrame:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.8, 1.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("popupInfo/TextureFrame1:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 1.1, 1.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("popupInfo/TextureFrame2:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 1.4, 1.9 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]

length = 0.75
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("popupPengetahuan:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.7 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Container" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 804.0
margin/bottom = 1280.0

[node name="TextureFrame" type="TextureFrame" parent="Container"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 804.0
margin/bottom = 1280.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 740.0
margin/bottom = 1116.0
custom_constants/margin_top = 500
custom_constants/margin_left = -60

[node name="TextureFrame" type="TextureFrame" parent="Container/MarginContainer"]

visibility/opacity = 0.333334
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -60.0
margin/top = 500.0
margin/right = 740.0
margin/bottom = 1116.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="TextureFrame1" type="TextureFrame" parent="Container/MarginContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -60.0
margin/top = 500.0
margin/right = 740.0
margin/bottom = 1116.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="VBoxContainer 2" type="VBoxContainer" parent="Container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 793.0
margin/bottom = 1448.0
alignment = 0

[node name="MarginContainer1" type="MarginContainer" parent="Container/VBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 793.0
margin/bottom = 50.0
custom_constants/margin_right = 0
custom_constants/margin_top = 25
custom_constants/margin_bottom = 25

[node name="HBoxContainer 2" type="HBoxContainer" parent="Container/VBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 54.0
margin/right = 793.0
margin/bottom = 359.0
alignment = 0

[node name="TextureFrame" type="TextureFrame" parent="Container/VBoxContainer 2/HBoxContainer 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 189.0
margin/bottom = 305.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="TextureFrame1" type="TextureFrame" parent="Container/VBoxContainer 2/HBoxContainer 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 193.0
margin/top = 0.0
margin/right = 793.0
margin/bottom = 305.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 363.0
margin/right = 793.0
margin/bottom = 1018.0
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="Container/VBoxContainer 2/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 655.0
custom_constants/margin_left = 300

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer 2/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 304.0
margin/top = 0.0
margin/right = 781.0
margin/bottom = 655.0
custom_constants/separation = 20
alignment = 0

[node name="btn_pengetahuan" type="TextureButton" parent="Container/VBoxContainer 2/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 477.0
margin/bottom = 151.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="btn_perlengkapan" type="TextureButton" parent="Container/VBoxContainer 2/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 171.0
margin/right = 477.0
margin/bottom = 322.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="btn_perilaku" type="TextureButton" parent="Container/VBoxContainer 2/HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 342.0
margin/right = 477.0
margin/bottom = 482.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 4
script/script = ExtResource( 13 )

[node name="btn_mini_game1" type="TextureButton" parent="Container/VBoxContainer 2/HBoxContainer/VBoxContainer"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 502.0
margin/right = 477.0
margin/bottom = 655.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )
params/resize_mode = 0
params/scale = Vector2( 0.9, 0.9 )
params/stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="Container/VBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1022.0
margin/right = 793.0
margin/bottom = 1102.0
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40

[node name="HBoxContainer 3" type="HBoxContainer" parent="Container/VBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1106.0
margin/right = 793.0
margin/bottom = 1329.0
custom_constants/separation = 20
alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="Container/VBoxContainer 2/HBoxContainer 3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 388.0
margin/top = 0.0
margin/right = 558.0
margin/bottom = 223.0

[node name="TextureButton" type="TextureButton" parent="Container/VBoxContainer 2/HBoxContainer 3/MarginContainer3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 170.0
margin/bottom = 223.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 16 )
textures/pressed = ExtResource( 17 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="MarginContainer4" type="MarginContainer" parent="Container/VBoxContainer 2/HBoxContainer 3"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 578.0
margin/top = 0.0
margin/right = 793.0
margin/bottom = 223.0
custom_constants/margin_right = 25
custom_constants/margin_bottom = 50

[node name="TextureButton" type="TextureButton" parent="Container/VBoxContainer 2/HBoxContainer 3/MarginContainer4"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 190.0
margin/bottom = 173.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 18 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="iki_close" type="TextureButton" parent="Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 1108.0
margin/right = 176.0
margin/bottom = 1263.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="Panel" type="Panel" parent="."]

visibility/visible = false
visibility/self_opacity = 0.25
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 804.0
margin/bottom = 1275.0

[node name="btn_mini_game" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 289.0
margin/top = 854.0
margin/right = 766.0
margin/bottom = 1007.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/pressed = ExtResource( 15 )
params/resize_mode = 0
params/scale = Vector2( 0.9, 0.9 )
params/stretch_mode = 4

[node name="popupPerilaku" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 413.974, 689.799 )
texture = ExtResource( 20 )

[node name="close_button" type="TextureButton" parent="popupPerilaku"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 255.0
margin/top = -273.0
margin/right = 343.0
margin/bottom = -190.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 21 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="popupPerilaku"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -250.0
margin/top = -131.0
margin/right = 254.0
margin/bottom = 347.0
custom_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="popupPerilaku/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 40.0
margin/right = 504.0
margin/bottom = 478.0
alignment = 0

[node name="btn_pejalan_kaki" type="TextureButton" parent="popupPerilaku/MarginContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 496.0
margin/bottom = 146.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 22 )
textures/pressed = ExtResource( 23 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="btn_pengendara" type="TextureButton" parent="popupPerilaku/MarginContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 150.0
margin/right = 496.0
margin/bottom = 274.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 24 )
textures/pressed = ExtResource( 25 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="popupPengetahuan" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 404.647, 632.113 )
texture = ExtResource( 26 )

[node name="close_button" type="TextureButton" parent="popupPengetahuan"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 241.0
margin/top = -207.0
margin/right = 329.0
margin/bottom = -124.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="popupPengetahuan"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -296.0
margin/top = -134.0
margin/right = 276.0
margin/bottom = 243.0
custom_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="popupPengetahuan/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 40.0
margin/right = 572.0
margin/bottom = 377.0
alignment = 0

[node name="btn_rambu" type="TextureButton" parent="popupPengetahuan/MarginContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 564.0
margin/bottom = 161.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 28 )
textures/pressed = ExtResource( 29 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="popupPengetahuan/MarginContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 165.0
margin/right = 564.0
margin/bottom = 278.0
custom_constants/margin_left = 100

[node name="btn_tips" type="TextureButton" parent="popupPengetahuan/MarginContainer/VBoxContainer/MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 0.0
margin/right = 564.0
margin/bottom = 113.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 30 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="popupInfo" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 404.647, 632.113 )
texture = ExtResource( 31 )

[node name="close_button" type="TextureButton" parent="popupInfo"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = -399.0
margin/right = 306.0
margin/bottom = -309.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 32 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureFrame" type="TextureFrame" parent="popupInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -262.0
margin/top = -307.0
margin/right = 252.0
margin/bottom = -101.0
texture = ExtResource( 33 )
stretch_mode = 0

[node name="TextureFrame1" type="TextureFrame" parent="popupInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -259.0
margin/top = -79.0
margin/right = 255.0
margin/bottom = 119.0
texture = ExtResource( 34 )
stretch_mode = 0

[node name="TextureFrame2" type="TextureFrame" parent="popupInfo"]

visibility/opacity = 0.4
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -259.0
margin/top = 145.0
margin/right = 255.0
margin/bottom = 339.0
texture = ExtResource( 35 )
stretch_mode = 0

[node name="popupClose" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 404.005, 588.932 )
texture = ExtResource( 36 )

[node name="Panel" type="Panel" parent="popupClose"]

visibility/opacity = 0.15
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -523.0
margin/top = -593.0
margin/right = 554.0
margin/bottom = 731.0

[node name="btn_yes" type="TextureButton" parent="popupClose"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -338.0
margin/top = 10.0
margin/right = -5.0
margin/bottom = 223.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 37 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="btn_no" type="TextureButton" parent="popupClose"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 8.0
margin/right = 301.0
margin/bottom = 221.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 38 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadeLamp = SubResource( 1 )
anims/moveCloud = SubResource( 2 )
anims/popup = SubResource( 3 )
anims/popupClose = SubResource( 4 )
anims/popupInfo = SubResource( 5 )
anims/popupPengetahuan = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="Container/VBoxContainer 2/HBoxContainer/VBoxContainer/btn_pengetahuan" to="." method="_on_btn_pengetahuan_pressed"]

[connection signal="pressed" from="Container/VBoxContainer 2/HBoxContainer/VBoxContainer/btn_perlengkapan" to="." method="_on_btn_perlengkapan_pressed"]

[connection signal="pressed" from="Container/VBoxContainer 2/HBoxContainer/VBoxContainer/btn_perilaku" to="." method="_on_btn_perilaku_pressed"]

[connection signal="toggled" from="Container/VBoxContainer 2/HBoxContainer 3/MarginContainer3/TextureButton" to="." method="_on_TextureButton_toggled"]

[connection signal="pressed" from="Container/VBoxContainer 2/HBoxContainer 3/MarginContainer4/TextureButton" to="." method="_on_TextureButton_pressed"]

[connection signal="pressed" from="Container/iki_close" to="." method="_on_iki_close_pressed"]

[connection signal="pressed" from="btn_mini_game" to="." method="_on_btn_mini_game_pressed"]

[connection signal="hide" from="popupPerilaku" to="." method="_on_popupPerilaku_hide"]

[connection signal="pressed" from="popupPerilaku/close_button" to="." method="_on_close_button_pressed"]

[connection signal="pressed" from="popupPerilaku/MarginContainer/VBoxContainer/btn_pejalan_kaki" to="." method="_on_btn_pejalan_kaki_pressed"]

[connection signal="pressed" from="popupPerilaku/MarginContainer/VBoxContainer/btn_pengendara" to="." method="_on_btn_pengendara_pressed"]

[connection signal="hide" from="popupPengetahuan" to="." method="_on_popupPengetahuan_hide"]

[connection signal="pressed" from="popupPengetahuan/close_button" to="." method="_on_close_button_pressed"]

[connection signal="pressed" from="popupPengetahuan/MarginContainer/VBoxContainer/btn_rambu" to="." method="_on_btn_rambu_pressed"]

[connection signal="pressed" from="popupPengetahuan/MarginContainer/VBoxContainer/MarginContainer/btn_tips" to="." method="_on_btn_tips_pressed"]

[connection signal="pressed" from="popupInfo/close_button" to="." method="_on_close_button_pressed"]

[connection signal="pressed" from="popupClose/btn_yes" to="." method="_on_btn_yes_pressed"]

[connection signal="pressed" from="popupClose/btn_no" to="." method="_on_btn_no_pressed"]


